--- a/resources/sass/custom/custom.scss
+++ b/resources/sass/custom/custom.scss
@@ -1129,3 +1129,176 @@ table.dataTable thead .sorting_desc_disabled:before {
 .iti__selected-flag {
     height: 36px !important;
 }
+
+.em_bg_sec{background: white;padding:30px 0px;}
+@media only screen and (max-width: 600px) {
+  .em_bg_sec{margin-top: -70px !important;}
+  .em_partnar_bg{margin-top: 0px !important;}
+}
+
+.section-header {
+  margin-bottom: 60px;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.section-header::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 60px;
+  height: 5px;
+  background: #f82249;
+  bottom: 0;
+  left: calc(50% - 25px);
+}
+
+.section-header h2 {
+  font-size: 36px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.section-header p {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: #9195a2;
+}
+.subscribe {
+    padding: 100px 0px;
+    background: url(https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=752&q=80) center center no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    position: relative;
+}
+
+.subscribe:before {
+  content: "";
+  background: rgba(6, 12, 34, 0.6);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.subscribe .section-header h2,
+.subscribe p {
+  color: #fff;
+}
+
+.subscribe input {
+  background: #fff;
+  color: #060c22;
+  border: 0;
+  outline: none;
+  margin: 0;
+  padding: 9px 20px;
+  border-radius: 50px;
+  font-size: 14px;
+}
+
+.subscribe button {
+  border: 0;
+  padding: 9px 25px;
+  cursor: pointer;
+  background: #f82249;
+  color: #fff;
+  transition: all 0.3s ease;
+  outline: none;
+  font-size: 14px;
+  border-radius: 50px;
+}
+
+.subscribe button:hover {
+  background: #e0072f;
+}
+
+@media only screen and (min-width: 768px) {
+  .subscribe input {
+    min-width: 400px;
+}
+
+}
+
+.em_partnar_bg{
+    background: #f4f8ff !important;
+    padding: 50px 0px 50px 0px;
+    margin-top: 210px;
+}
+.section-padding{
+  padding:30px 0;
+}
+.brand-carousel {
+  margin-top: 20px;
+}
+.owl-dots{
+  text-align: center;
+}
+
+.owl-dot {
+  display: inline-block;
+  height: 15px !important;
+  width: 15px !important;
+  background-color: #222222 !important;
+  opacity: 0.8;
+  border-radius: 50%;
+  margin: 0 5px;
+}
+
+.owl-dot.active {
+  background-color: #FF170F !important;
+}
+
+.cus_owl_img{
+    width: 50% !important;
+    margin: 0 auto;
+}
+
+/* ignore the code below */
+
+
+.link-area
+{
+  position:fixed;
+  bottom:20px;
+  left:20px;
+  padding:15px;
+  border-radius:40px;
+  background:tomato;
+}
+.link-area a
+{
+  text-decoration:none;
+  color:#fff;
+  font-size:25px;
+}
+
+
+.question--answer-area .set{
+    background: #f4f8ff;
+}
+
+.personality--aptitude-main {
+    background-color: #f4f8ff !important;
+    padding: 100px 0;
+}
+
+.personality--aptitude-main .common-div{
+    box-shadow: 0 7px 14px 0 rgb(65 69 88 / 10%), 0 3px 6px 0 rgb(0 0 0 / 7%) !important;
+    background: #fff !important;
+}
+
+.em_bg_home{
+    background: #f4f8ff !important;
+    padding-top: 0px !important;
+    padding-bottom: 100px !important;
+}
+
+.em_pb_50{padding-bottom: 50px;}
+.pd-t-40{padding-top: 40px !important;}
